[package]
name = "rust-web-tools-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-graphql = { version = "=6.0.10", features = [
    "dataloader",
    "log",
    "opentelemetry",
], optional = true }
async-graphql-axum = "=6.0.10"
axum = { version = "0.6.20", optional = true }
chrono = { version = "0.4.34", optional = true }
opentelemetry = { version = "0.20.0", features = ["rt-tokio"], optional = true } # async-graphqlで使われているものとバージョンを合わせないといけない?
opentelemetry-otlp = { version = "0.13.0", optional = true }
sea-orm = { version = "0.12.14", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "mock",
    "debug-print",
], optional = true }
sentry = { version = "0.31.8", optional = true }
sentry-tracing = { version = "0.31.8", optional = true }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.4.4", features = ["cors"] }
tracing = { version = "0.1.37", optional = true }
tracing-opentelemetry = { version = "0.20", optional = true }
tracing-subscriber = { version = "0.3.17", features = [
    "env-filter",
], optional = true }


[features]
default = ["full"]
full = [
    "with-sea-orm",
    "with-opentelemetry",
    "with-graphql",
    "with-sentry",
    "with-axum",
]
with-sea-orm = ["sea-orm"]
with-sentry = ["sentry", "serde_json", "sentry-tracing"]
with-opentelemetry = [
    "opentelemetry",
    "opentelemetry-otlp",
    "tracing",
    "tracing-opentelemetry",
    "tracing-subscriber",
]
with-axum = ["axum"]
with-graphql = ["async-graphql", "chrono"]
