[package]
name = "rust-web-tools-test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1"
async-graphql = { version = "=7.0.11", features = [
    "dataloader",
    "log",
    "opentelemetry",
], optional = true }
async-graphql-axum = "=7.0.11"
axum = { version = "=0.7.7", optional = true }
chrono = { version = "0.4.34", optional = true }
opentelemetry = { version = "=0.25.0", optional = true } # async-graphqlで使われているものとバージョンを合わせないといけない?
opentelemetry_sdk = { version = "=0.25.0", features = [
    "rt-tokio",
], optional = true }
opentelemetry-otlp = { version = "=0.25.0", optional = true }
sea-orm = { version = "1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "mock",
    "debug-print",
], optional = true }
sentry = { version = "0.31.8", optional = true }
sentry-tracing = { version = "0.31.8", optional = true }
serde = { version = "1.0.210", features = ["derive"] }
serde_json = { version = "1", optional = true }
tokio = { version = "1", features = ["full"] }
tower-http = { version = "=0.6.1", features = ["cors"] }
tracing = { version = "0.1" }
tracing-opentelemetry = { version = "=0.26", optional = true }
tracing-subscriber = { version = "0.3", features = [
    "env-filter",
], optional = true }


[features]
default = ["full"]
full = [
    "with-sea-orm",
    "with-opentelemetry",
    "with-graphql",
    "with-sentry",
    "with-axum",
]
with-sea-orm = ["sea-orm"]
with-sentry = ["sentry", "serde_json", "sentry-tracing"]
with-opentelemetry = [
    "opentelemetry",
    "opentelemetry_sdk",
    "opentelemetry-otlp",
    "tracing-opentelemetry",
    "tracing-subscriber",
]
with-axum = ["axum"]
with-graphql = ["async-graphql", "chrono"]
